# European-Vacation

./: .gitignore  AddCityDialog.ui  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.3ab3b3d  City.cpp  City.h  Doxyfile  European-Vacation.cbp  LoginDialog.ui  Makefile  ManageCities.cpp  ManageCities.h  README.md  account.cpp  account.ui  cities.sql  cities.sqlite  cmake_install.cmake  login.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  ui_mainwindow.h
.github/workflows/: ci.yml
Admin/: Admin.cpp  Admin.h
DB/: cities-table.sqlite  new-cities-table.sqlite  user-info.sqlite
DB/Database/: Database.cpp  Database.h
Database/: Database.cpp  Database.h
European-Vacation_autogen/: mocs_compilation.cpp
European-Vacation_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_moddedlineedit.cpp  moc_moddedlineedit.cpp.d
European-Vacation_autogen/HWWWPWVTXK/: moc_interface.cpp  moc_interface.cpp.d
European-Vacation_autogen/I4YZB3GBVK/: moc_moddedlineedit.cpp  moc_moddedlineedit.cpp.d
European-Vacation_autogen/SOFTFQEKRY/: moc_login.cpp  moc_login.cpp.d
European-Vacation_autogen/include/: ui_login.h  ui_mainwindow.h
ManageCity/: ManageCities.cpp  ManageCities.h
ManageCity/City/: City.cpp  City.h
SQLite/: cities.sql  new-cities.sql  users.sql
Shell/: read_DB.sh
UI/: CMakeLists.txt  LoginDialog.ui  ManageCities.cpp  ManageCities.h  MapWindow.ui  WelcomeWindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
UI/ManageCity/: ManageCities.h
UI/Map/: Map.cpp  Map.h  map.cpp  map.h
UI/ModdedLineEdit/: moddedlineedit.cpp  moddedlineedit.h
UI/TreeWidget/: Interface.cpp  Interface.h
UI/UI/account/: newaccount.h
UI/UI/login/: login.cpp
UI/account/: account.h  newaccount.cpp  newaccount.ui
UI/login/: login.cpp  login.h  login.ui
UI/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
